<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/all_categories">

    <fragment
        android:id="@+id/all_categories"
        android:name="com.opm.b2b.ui.home.AllCategoriesFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_all_categories" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.opm.b2b.ui.gallery.MyOrdersFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_my_orders" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.opm.b2b.ui.slideshow.PoliciesFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_policies" />
</navigation>