<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout9"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/rewards_gradient"
    android:gravity="bottom"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:theme="@style/SplashTheme">

    <de.hdodenhof.circleimageview.CircleImageView

        android:id="@+id/main_profile_image"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/nav_header_desc"
        android:elevation="3dp"
        android:src="@mipmap/ic_launcher"
        app:civ_border_color="@color/white"
        app:civ_border_width="2dp"
        app:layout_constraintBottom_toTopOf="@+id/main_fullname"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toTopOf="parent"
        tools:layout_conversion_absoluteHeight="65dp"
        tools:layout_conversion_absoluteWidth="65dp" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/add_image_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:elevation="3dp"
        android:src="@drawable/ic_baseline_add_24"
        app:civ_border_color="@color/white"
        app:civ_border_width="2dp"
        app:layout_constraintBottom_toBottomOf="@+id/main_profile_image"
        app:layout_constraintEnd_toEndOf="@+id/main_profile_image"
        app:layout_constraintStart_toStartOf="@+id/main_profile_image"
        app:layout_constraintTop_toBottomOf="@+id/main_profile_image"
        tools:layout_conversion_absoluteHeight="24dp"
        tools:layout_conversion_absoluteWidth="24dp" />

    <TextView
        android:id="@+id/main_fullname"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        android:text="@string/not_signed_in"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_profile_image"
        tools:layout_conversion_absoluteHeight="27dp"
        tools:layout_conversion_absoluteWidth="379dp" />

    <TextView
        android:id="@+id/main_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/email"
        android:textColor="@color/transparent_white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_fullname"
        tools:layout_conversion_absoluteHeight="19dp"
        tools:layout_conversion_absoluteWidth="90dp" />


</androidx.constraintlayout.widget.ConstraintLayout>